# waste-recycling

./: CMakeLists.txt  Dustbin.cpp  Dustbin.h  main.cpp
Exceptions/: GarbageException.cpp  GarbageException.h
Garbage/: Garbage.cpp  Garbage.h  PaperGarbage.cpp  PaperGarbage.h  PlasticGarbage.cpp  PlasticGarbage.h
